--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
 <!-- BOX1 -->
       <div class="box1 d-flex justify-content-centre ms-auto mt-5 mb-5">
-        <div class="blackellipse col-sm-4 d-flex justify-content-center "> <img src="./styles.css/Ellipse 36.svg" alt="img7" class="img7"></div>
+        <div class="blackellipse col-sm-4 d-flex justify-content-center"> <img src="./styles.css/Ellipse 36.svg" alt="img7" class="img7"></div>
         <div>
         <div class="box11 col-sm d-inline-flex justify-content-left "> 
-        <h3 class="name col-sm-1 me-4"> <b>name</b> </h3> 
+        <div class="name col-sm-4"><h3 class="name me-4"> <b>NAME</b> </h3> </div>
         <button type="button1" class="button1 col-sm-2 d-flex justify-content-center me-2" disabled>Follow</button>
         <button type="button2" class="button2 col-sm-1"><img src="./styles.css/Polygon 9.svg" alt="img8"></button>
         <img src="./styles.css/Ellipse 40.svg" alt="img9" class="img9 d-flex justify-content-center col-sm-1 ms-4 mt-2">
@@ -50,27 +50,29 @@
       <img src="./styles.css/Ellipse 40.svg" alt="img9" class="img9 d-flex col-sm-1  justify-content-center ms-1 mt-2">
     </div>
 <div class="box12 d-flex f-row "> 
-    <a href="#" class="textbox1 text-dark col-4 col-sm-3 d-flex justify-content-left ">  <strong>79 </strong> posts</a>
-    <a href="#" class="textbox1 text-dark col-4 col-sm-3 d-flex justify-content-left"> <strong>379 </strong>  followers</a>
-    <a href="#" class="textbox1 text-dark col-4 col-sm-3 d-flex justify-content-left"><strong>179 </strong> following </a>
+    <a href="#" class="textbox1 text-dark col-4 col-sm-3 d-flex justify-content-left "> <strong>79</strong> &nbsp;posts</a>
+    <a href="#" class="textbox1 text-dark col-4 col-sm-3 d-flex justify-content-left"> <strong>379 </strong> &nbsp;followers</a>
+    <a href="#" class="textbox1 text-dark col-4 col-sm-3 d-flex justify-content-left"><strong>179 </strong> &nbsp;following </a>
 </div>
 <p class="textbox11 mt-3 mb-0"> <b>Name</b> </p>
 <p class="textbox12">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
-<a href="#" class="link mt-0">bit.ly/35Ce3mX</a> 
+<div class="link1">
+<a href="#" class="link mt-0">bit.ly/35Ce3mX</a> </div>
 </div>
 </div>
 
 
 <!-- BOX2 -->
+
 <div class="box2 d-flex justify-content-left f-row align-items-between mx-auto mt-7" >
    <div class="img10 col-1 me-5"  > <img src="./styles.css/Ellipse 42.svg" alt="ellipse1">
-<h3>Name</h3>
+<h3 class="textbox211">Name</h3>
 </div>
 <div class="img10 col-1 me-5"  > <img src="./styles.css/Ellipse 42.svg" alt="ellipse1">
-  <h3>Name</h3>
+  <h3 class="textbox211">Name</h3>
   </div>
   <div class="img10 col-1 me-5"  > <img src="./styles.css/Ellipse 42.svg" alt="ellipse1">
-    <h3>Name</h3>
+    <h3 class="textbox211">Name</h3>
     </div>
 </div>
 
@@ -89,28 +91,28 @@
 
 
 <!-- BOX4 -->
-<div class="box4 d-flex justify-content-center mx-auto mt-5">
-    <div class="p-2 flex-fill"><img src="./styles.css/Rectangle 70.svg" alt=""></div>
-    <div class="p-2 flex-fill"><img src="./styles.css/Rectangle 70.svg" alt=""></div>
-    <div class="p-2 flex-fill"><img src="./styles.css/Rectangle 70.svg" alt=""></div>
+<div class="box4 d-flex justify-content-center mx-auto ">
+    <div class="p-2 flex-fill"><img src="./styles.css/Rectangle 70.svg" alt="" class="img14"></div>
+    <div class="p-2 flex-fill"><img src="./styles.css/Rectangle 70.svg" alt="" class="img14"></div>
+    <div class="p-2 flex-fill"><img src="./styles.css/Rectangle 70.svg" alt="" class="img14"></div>
   </div>
 
   <div class="box4 d-flex justify-content-center mx-auto mt-5">
-    <div class="p-2 flex-fill"><img src="./styles.css/Rectangle 70.svg" alt=""></div>
-    <div class="p-2 flex-fill"><img src="./styles.css/Rectangle 70.svg" alt=""></div>
-    <div class="p-2 flex-fill"><img src="./styles.css/Rectangle 70.svg" alt=""></div>
+    <div class="p-2 flex-fill"><img src="./styles.css/Rectangle 70.svg" alt="" class="img14"></div>
+    <div class="p-2 flex-fill"><img src="./styles.css/Rectangle 70.svg" alt="" class="img14"></div>
+    <div class="p-2 flex-fill"><img src="./styles.css/Rectangle 70.svg" alt="" class="img14"></div>
   </div>
 
   <div class="box4 d-flex justify-content-center mx-auto mt-5">
-    <div class="p-2 flex-fill"><img src="./styles.css/Rectangle 70.svg" alt=""></div>
-    <div class="p-2 flex-fill"><img src="./styles.css/Rectangle 70.svg" alt=""></div>
-    <div class="p-2 flex-fill"><img src="./styles.css/Rectangle 70.svg" alt=""></div>
+    <div class="p-2 flex-fill"><img src="./styles.css/Rectangle 70.svg" alt="" class="img14"></div>
+    <div class="p-2 flex-fill"><img src="./styles.css/Rectangle 70.svg" alt="" class="img14"></div>
+    <div class="p-2 flex-fill"><img src="./styles.css/Rectangle 70.svg" alt="" class="img14"></div>
   </div>
 
   <div class="box4 d-flex justify-content-center mx-auto mt-5">
-    <div class="p-2 flex-fill"><img src="./styles.css/Rectangle 70.svg" alt=""></div>
-    <div class="p-2 flex-fill"><img src="./styles.css/Rectangle 70.svg" alt=""></div>
-    <div class="p-2 flex-fill"><img src="./styles.css/Rectangle 70.svg" alt=""></div>
+    <div class="p-2 flex-fill"><img src="./styles.css/Rectangle 70.svg" alt="" class="img14"></div>
+    <div class="p-2 flex-fill"><img src="./styles.css/Rectangle 70.svg" alt="" class="img14"></div>
+    <div class="p-2 flex-fill"><img src="./styles.css/Rectangle 70.svg" alt="" class="img14"></div>
   </div>
 
 
