--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <!-- HEADER -->
-  <div class="row d-flex justify-content-between mx-auto mt-3">
+  <div class="row d-flex justify-content-around mt-3">
         <div class="insta col-sm-4 justify-content-center"><img src="./styles.css/Vector (3).svg" alt="insta"></div>
         <button type="button" class="btn btn-info d-flex justify-content-center col-sm-4">
           <span class="glyphicon glyphicon-search"></span> <img src="./styles.css/search (2).png" alt="search" class="search ps-2 pe-4" srcset="">Search
@@ -32,22 +32,24 @@
             <img src="./styles.css/Ellipse 37.svg" alt="img5" class="img1 pe-2">
         </div>
       </div>
-      <div class="line d-flex justify-content-center mx-auto mt-3">
-        <img src="./styles.css/Rectangle 93.svg" alt="img6">
-      </div>
+      <div>
+        <img src="./styles.css/Rectangle 69.svg" alt="img11" class="img11 d-flex justify-content-center mx-auto mt-5">
+    </div>
       
 
 <!-- BOX1 -->
-      <div class="box1 d-flex justify-content-centre ms-auto mt-5 mb-5">
+      <div class="box1 d-flex justify-content-center mt-5 mb-5">
         <div class="blackellipse col-sm-4 d-flex justify-content-center"> <img src="./styles.css/Ellipse 36.svg" alt="img7" class="img7"></div>
         <div>
         <div class="box11 col-sm d-inline-flex justify-content-left "> 
-        <div class="name col-sm-4"><h3 class="name me-4"> <b>NAME</b> </h3> </div>
+        <div class="name col-sm-2"><h3 class="name me-4"> <b>NAME</b> </h3> </div>
         <button type="button1" class="button1 col-sm-2 d-flex justify-content-center me-2" disabled>Follow</button>
         <button type="button2" class="button2 col-sm-1"><img src="./styles.css/Polygon 9.svg" alt="img8"></button>
-        <img src="./styles.css/Ellipse 40.svg" alt="img9" class="img9 d-flex justify-content-center col-sm-1 ms-4 mt-2">
-      <img src="./styles.css/Ellipse 40.svg" alt="img9" class="img9 d-flex col-sm-1 justify-content-center ms-1 mt-2">
-      <img src="./styles.css/Ellipse 40.svg" alt="img9" class="img9 d-flex col-sm-1  justify-content-center ms-1 mt-2">
+       <div class="boxpoint d-flex justify-content-between ms-2 ">
+        <img src="./styles.css/Ellipse 40.svg" alt="img9" class="img9 d-flex">
+      <img src="./styles.css/Ellipse 40.svg" alt="img9" class="img9 d-flex ">
+      <img src="./styles.css/Ellipse 40.svg" alt="img9" class="img9 d-flex "></div>
+        
     </div>
 <div class="box12 d-flex f-row "> 
     <a href="#" class="textbox1 text-dark col-4 col-sm-3 d-flex justify-content-left "> <strong>79</strong> &nbsp;posts</a>
@@ -64,14 +66,14 @@
 
 <!-- BOX2 -->
 
-<div class="box2 d-flex justify-content-left f-row align-items-between mx-auto mt-7" >
-   <div class="img10 col-1 me-5"  > <img src="./styles.css/Ellipse 42.svg" alt="ellipse1">
+<div class="box2 d-flex  justify-content-left  f-row  mt-7 " >
+   <div class="img10 col-1 "  > <img src="./styles.css/Ellipse 42.svg" alt="ellipse1">
 <h3 class="textbox211">Name</h3>
 </div>
-<div class="img10 col-1 me-5"  > <img src="./styles.css/Ellipse 42.svg" alt="ellipse1">
+<div class="img10 col-1 "  > <img src="./styles.css/Ellipse 42.svg" alt="ellipse1">
   <h3 class="textbox211">Name</h3>
   </div>
-  <div class="img10 col-1 me-5"  > <img src="./styles.css/Ellipse 42.svg" alt="ellipse1">
+  <div class="img10 col-1 "  > <img src="./styles.css/Ellipse 42.svg" alt="ellipse1">
     <h3 class="textbox211">Name</h3>
     </div>
 </div>
@@ -82,7 +84,7 @@
 
 
 <!-- BOX3 -->
-<div class="box3 d-flex f-row justify-content-center mx-auto mx-auto mt-3 align-items-baseline">
+<div class="box3 d-flex f-row justify-content-center mx-auto mx-auto mt-2 align-items-baseline">
   <img src="./styles.css/Vector (8).svg" alt="" class="img13 me-2">
   <p><strong>POSTS</strong> </p>
   <img src="./styles.css/Vector (9).svg" alt="" class="img13 ms-4 me-2">
