--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 
 <!-- BOX4 -->
-<div class="box4 d-flex justify-content-center mx-auto ">
+<div class="box4 d-flex justify-content-center">
     <div class="p-2 flex-fill"><img src="./styles.css/Rectangle 70.svg" alt="" class="img14"></div>
     <div class="p-2 flex-fill"><img src="./styles.css/Rectangle 70.svg" alt="" class="img14"></div>
     <div class="p-2 flex-fill"><img src="./styles.css/Rectangle 70.svg" alt="" class="img14"></div>
